--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "pseudo_interpreter"
 version = "0.1.0"
 edition = "2021"
+authors = ["Prince Mbeah Essilfie <mbeahessilfieprince@gmail.com>"]
+license = "MIT OR Apache-2.0"
+description = "A tool to git status automation"
+readme = "README.md"
+homepage = "https://github.com/Kratosgado/pseudo_interpreter"
+repository = "https://github.com/Kratosgado/pseudo_interpreter"
+keywords = ["interpreter", "programming language", "pseudocode", "system design"]
+categories = ["Development tools", "Programming language"]
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
